update the Oracle JDBC Driver

--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,11 @@
         </dependency>
 
         <!-- Database -->
-        <dependency>
-            <groupId>com.oracle</groupId>
-            <artifactId>ojdbc14</artifactId>
-            <version>${oracle.version}</version>
-        </dependency>
+<dependency>
+    <groupId>com.oracle</groupId>
+    <artifactId>ojdbc6</artifactId>
+    <version>11.2.0</version>
+</dependency>
 
         <dependency>
             <groupId>org.liquibase</groupId>
